--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "es6-sample-project",
   "version": "1.0.0",
-  "description": "An ES6 sample project using Rollup, Babel, Sass",
+  "description": "An ES6 sample project using Rollup, Bublé, Sass",
   "author": "Jonatas Walker",
   "homepage": "https://github.com/jonataswalker/es6-sample-project",
   "license": "MIT",
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-preset-es2015-rollup": "^1.1.1",
     "clean-css": "^3.4.12",
     "eslint": "^2.8.0",
     "node-sass": "^3.4.2",
@@ -29,7 +28,7 @@
     "parallelshell": "^2.0.0",
     "postcss-cli": "^2.5.1",
     "rollup": "^0.25.8",
-    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-buble": "^0.5.0",
     "rollup-plugin-json": "^2.0.0",
     "susy": "^2.2.12",
     "uglify-js": "^2.6.2"
@@ -40,7 +39,7 @@
       "amd": true,
       "commonjs": true,
       "es6": true,
-      "node": false
+      "node": true
     },
     "rules": {
       "block-scoped-var": 1,
