--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es6-sample-project",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "An ES6 sample project using Rollup, Bublé, Sass",
   "author": "Jonatas Walker",
   "homepage": "https://github.com/jonataswalker/es6-sample-project",
@@ -19,56 +19,27 @@
     "url": "https://github.com/jonataswalker/es6-sample-project/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "clean-css": "^3.4.12",
+    "autoprefixer": "^6.4.1",
+    "clean-css": "^3.4.19",
     "eslint": "^3.5.0",
+    "eslint-config-jwalker": "^1.9.0",
     "node-sass": "^3.9.3",
     "node-sass-json-importer": "^2.1.1",
-    "nodemon": "^1.9.1",
+    "nodemon": "^1.10.2",
     "parallelshell": "^2.0.0",
-    "postcss-cli": "^2.5.1",
+    "postcss-cli": "^2.6.0",
     "rollup": "^0.35.0",
     "rollup-plugin-buble": "^0.13.0",
     "rollup-plugin-json": "^2.0.2",
-    "susy": "^2.2.12",
-    "uglify-js": "^2.6.2"
+    "uglify-js": "^2.7.3"
   },
   "eslintConfig": {
-    "env": {
-      "browser": true,
-      "amd": true,
-      "commonjs": true,
-      "es6": true,
-      "node": true
-    },
-    "rules": {
-      "block-scoped-var": 1,
-      "dot-notation": 1,
-      "no-alert": 2,
-      "no-caller": 2,
-      "no-eval": 2,
-      "no-proto": 2,
-      "no-redeclare": 2,
-      "valid-typeof": 2,
-      "no-unreachable": 2,
-      "no-irregular-whitespace": 1,
-      "no-invalid-regexp": 1,
-      "no-func-assign": 2,
-      "no-extra-semi": 2,
-      "no-dupe-keys": 2,
-      "no-undef": 2,
-      "no-use-before-define": 2,
-      "no-unused-vars": 1,
-      "strict": [
-        1,
-        "global"
-      ],
-      "key-spacing": 1,
-      "new-cap": 1,
-      "quotes": [
-        1,
-        "single"
-      ]
-    }
+    "extends": "jwalker"
+  },
+  "scripts": {
+    "test": "make test",
+    "preversion": "npm run test",
+    "version": "",
+    "postversion": "git push && git push --tags && npm publish"
   }
 }
